dashboard/kubernetes-dashboard-service.yaml
---
# ------------------- Dashboard Service ------------------- #
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: istio-in-kubernetes-dashboard
  name: istio-in-kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
    - port: 80
      targetPort: 9090
      nodePort: 30001
  selector:
    k8s-app: istio-in-kubernetes-dashboard
  type: NodePort


# Dashboard Service是在kube-system这个namespace，我常用namespace是在kube-devops，所以使用一个service代理跨namespace访问
---
apiVersion: v1
kind: Service
metadata:
  name: istio-in-kubernetes-dashboard-proxy-service
  namespace: kube-devops
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ExternalName
  externalName: istio-in-kubernetes-dashboard.kube-system.svc.cluster.local

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-controller-k8s-dashboard
  namespace: kube-devops
spec:
  rules:
  - host: k8s-dashboard.ops.dragonest.com
    http:
      paths:
      - path: /
        backend:
          serviceName: istio-in-kubernetes-dashboard-proxy-service
          servicePort: 80
